add support for both datasets, add chart for ILN010 dataset

--- a/Components/Pages/ILN010.razor
+++ b/Components/Pages/ILN010.razor
@@ -70,7 +70,7 @@
 </table>
 
 @code {
-    DataTable data1;
+    public required DataTable data1;
     bool marriages = true, divorces = true, averages = true;
 
 
