--- a/Components/App.razor
+++ b/Components/App.razor
@@ -20,6 +20,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
+    <script src="chartInterop.js"></script>
+
 </body>
 
 </html>
