--- a/Components/Pages/IZI041.razor
+++ b/Components/Pages/IZI041.razor
@@ -69,7 +69,7 @@
 </table>
 
 @code {
-    DataTable data1;
+    public required DataTable data1;
     bool all = true, men = true, women = true;
 
 
@@ -79,10 +79,5 @@
         using var reader = ExcelReaderFactory.CreateReader(new FileStream(filePath, FileMode.Open));
         data1 = reader.AsDataSet().Tables[0];
         await base.OnInitializedAsync();
-    }
-
-    private void toggleAll()
-    {
-        all = !all;
     }
 }
